--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -475,3 +475,18 @@ li{
     align-items: center;
     justify-content: center;
 }
+.bookedboxmain{
+    width: 450px;
+    margin: 50px;
+    padding: 20px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border-radius: 15px;
+}
+
+.viewbookedmain{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
