--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -283,24 +283,14 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .submail{
-    margin: 5px;
-    padding: 5px;
+    margin: 10px;
+    padding: 10px;
     background-color: rgb(31, 28, 42);
     color: white;
     font-size: 15px;
     border-radius: 10px;
 }
-.conui{
-   justify-content: center;
-}
-.conli{
-    list-style: none;
-    padding: 8px;
-}
-.conlabel{
-    padding: 10px;
 
-}
 .coninput{
     border: none;
     border-bottom: 2px rgb(11, 0, 53) solid;
@@ -308,6 +298,43 @@
     margin-bottom: 15px;
 }
 
+
+.formInput{
+    display: flex;
+    flex-direction: column;
+    width: 280px;
+    align-items: center;
+    justify-content: center;
+}
+
+input{
+    padding: 15px;
+    margin: 10px 0px;
+    border-radius: 5px;
+    border: none;
+    border-bottom: 2px rgb(11, 0, 53) solid;
+}
+
+
+label{
+    font-size: 14px;
+    color: black;
+}
+
+span{
+    font-size: 12px;
+    padding: 3px;
+    color: red;
+    display: none;
+}
+
+input:invalid[focused="true"]{
+    border: 1px solid red;
+}
+
+input:invalid[focused="true"] ~ span{
+    display: block;
+}
 @media screen and (max-width:780px){
     .contactmail{
         margin-left: 50px;
@@ -468,6 +495,9 @@ li{
     padding: 20px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .additemssec{
