--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -509,11 +509,17 @@ li{
     justify-content: center;
 }
 .bookedboxmain{
+    display: flex;
     width: 450px;
     margin: 50px;
     padding: 20px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     border-radius: 15px;
+    align-items: center;
+    justify-content: center;
+}
+.bookedboxinner{
+    text-align: left;
 }
 
 .viewbookedmain{
