--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -529,3 +529,13 @@ li{
     justify-content: center;
     align-items: center;
 }
+
+.dialoguecontentcenter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.additemdialogueicon{
+    width: 80px;
+}
