--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -72,6 +72,7 @@
     .links{
         color: black;
         text-align: center;
+        font-size: 30px;
         padding: 32px;
         width: 100%;
         transition: all 0.5s ease;
