--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -287,6 +287,7 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .submail{
+    height: 40px;
     margin: 10px;
     padding: 10px;
     background-color: rgb(31, 28, 42);
@@ -304,6 +305,20 @@
     font-size: 15px;
     border-radius: 10px;
     border: 1px solid red;
+}
+.withloading{
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    
+}
+.loadingimage{
+    height: 50px;
+}
+.loadingimageclose{
+    display: none;
 }
 
 .coninput{
