--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -7,6 +7,8 @@
 }
 
 .navbar{
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -526,7 +528,6 @@ li{
 
 
 .additemsmain{
-    width: 450px;
     margin: 50px;
     padding: 20px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -540,6 +541,12 @@ li{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.additemsinner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 .bookedboxmain{
     display: flex;
