--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -46,6 +46,12 @@
     display: none;
 }
 
+.mobilediv{
+    display: flex;
+    flex-direction: row;
+    margin: 15px;
+}
+
 .tabs{
     font-size: 20px;
 }
@@ -56,6 +62,11 @@
         max-width: 350px;
         padding: 20px;
         border-radius: 25px;
+    }
+    .mobilediv{
+        display: flex;
+        flex-direction: column;
+        margin: 15px;
     }
     .detailedpic{
         max-height: 350px;
@@ -92,8 +103,8 @@
     .links{
         color: black;
         text-align: center;
-        font-size: 30px;
-        padding: 32px;
+        font-size: 15px;
+        padding: 15px;
         width: 100%;
         transition: all 0.5s ease;
     }
