--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -318,7 +318,7 @@
     height: 40px;
     margin: 10px;
     padding: 10px;
-    background-color: rgb(31, 28, 42);
+    background-color: rgb(11, 0, 53);
     color: white;
     width: 150px;
     font-size: 15px;
@@ -335,13 +335,31 @@
     border: 1px solid red;
 }
 .withloading{
+    margin-left: 15px;
     display: flex;
     flex-direction: row;
     height: 50px;
     justify-content: center;
     align-items: center;
+    width: 250px;
+    border-radius: 5px;
+    background-color: rgb(11, 0, 53);
     
 }
+
+.withloadingdelete{
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    border-radius: 5px;
+    background-color: red;
+    
+}
+
 .loadingimage{
     height: 50px;
 }
