--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -12,7 +12,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 60px;
     background-color: white;
     border: 1px white solid;
     box-shadow: 0 2px 4px 0 black, 0 2px 10px 0 black;
@@ -57,7 +56,9 @@
 
 .mobilediv{
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     margin: 15px;
 }
 
@@ -212,9 +213,9 @@
 }
 
 .container:hover .pic{
-    transform: translateY(-5px);
+    /* transform: translateY(-5px);
     z-index: -2;
-    display: block;
+    display: block; */
 }
 
 .container:hover .details{
