--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -9,6 +9,7 @@
 .navbar{
     position: sticky;
     top: 0;
+    min-height: 60px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -22,13 +23,14 @@
     color: black;
 }
 
-.naviconlabel{
-    margin-top: 15px;
-}
+
 
 .naviconsmain{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
 }
 
 .nav-li{
@@ -42,8 +44,7 @@
     text-decoration: none;
     color: black;
     font-size: 13px;
-    padding: 5px 5px;
-    margin: 0 5px;
+    height: 40px;
     cursor: pointer;
 }
 .links:hover{
@@ -52,6 +53,7 @@
 
 .mobile-menu-icon{
     display: none;
+    margin-top: -10px;
 }
 
 .mobilediv{
@@ -70,7 +72,7 @@
     .pic{
         height: 400px;
         max-width: 350px;
-        padding: 20px;
+        padding: 7px;
         border-radius: 25px;
     }
     .mobilediv{
@@ -105,7 +107,7 @@
         top: 75px;
         transition: all 0.5s ease-out;
         width: 60%;
-        border: 1px rgb(119, 231, 109) solid;
+        border: 1px rgb(31, 28, 42) solid;
         border-radius: 15px;
         margin-left: 20% ;
         margin-right: 20%;
@@ -163,7 +165,7 @@
 
 .pic{
     height: 400px;
-    padding: 20px;
+    padding: 10px;
     border-radius: 25px;
 }
 
@@ -583,7 +585,6 @@ li{
 }
 .social-size{
     width: 20px;
-    margin: 15px;
 }
 .social-size:hover{
     font-size: 120px;
